# fastapi_template

./: .env  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  pytest.ini  run.py
alembic/: env.py
alembic/versions/: 1a8b6e5ce77d_init.py
app/: __init__.py  config.py  main.py
app/infra/: __init__.py
app/infra/cache/: __init__.py  redis.py
app/infra/db/: __init__.py  postgres.py
app/infra/logger/: logger.py
app/modules/: __init__.py
app/modules/health/: __init__.py
app/modules/health/models/: __init__.py
app/modules/health/router/: __init__.py  health_router.py
app/modules/health/schemas/: __init__.py  health_response.py
app/modules/health/service/: __init__.py  health_service.py
scripts/: lint.sh
tests/integration/: conftest.py  test_health_endpoint.py
tests/unit/: test_config.py  test_health_service.py  test_logger.py
