[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.124.2",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "mypy>=1.19.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "redis>=7.1.0",
    "ruff>=0.14.8",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

exclude = [
    "alembic",
]

[tool.ruff.lint]
# Включаем основные категории:
# E,F - ошибки/варнинги Flake8
# I   - импорты (аналог isort)
# B   - bugbear (подозрительные места)
# UP  - модернизация кода под новые версии Python
# N   - нейминг
select = ["E", "F", "I", "B", "UP", "N"]
ignore = [
    "D",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
force-single-line = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
